# LWC-sparkle

./: pom.xml  readme.md
src/main/java/: BooleanAddition.java  ConversionUtil.java  Esch.java  MaskedSparkle.java  MaskedSparkleBoolean.java  MaskedSparkleFirstOrder.java  MaskedSparkleHigherOrder.java  PassiveSparkle.java  Schwaemm.java  SchwaemmMasked.java  SchwaemmType.java  Sparkle.java  SparkleCopy.java  SparkleMasked.java  SparkleMaskedNoThread.java  SparkleMaskedSingleThread.java  ThreadedMaskedSparkle.java
src/main/java/esch/: Esch.java  EschMasked.java
src/main/java/schwaemm/: Schwaemm.java  SchwaemmMasked.java  SchwaemmMasked2.java  SchwaemmMaskedHigher.java  SchwaemmMaskedHigher2.java  SchwaemmType.java
src/main/java/sparkle/: BooleanAddition.java  MaskedSparkle.java  MaskedSparkleBoolean.java  MaskedSparkleFirstOrder.java  MaskedSparkleGoubin.java  MaskedSparkleHigherOrder.java  MaskedSparkleKoggeStone.java  Sparkle.java
src/main/java/util/: ConversionUtil.java
src/main/resources/: sparkle
src/test/java/: ABOXTest.java  BooleanAdditionTest.java  EschKatTestHelper.java  EschTest256.java  EschTest384.java  MaskedSparkleBooleanTest.java  MaskedSparkleFirstOrderTest.java  MaskedSparkleTest.java  ProcessCaller.java  Schwaemm128128Test.java  Schwaemm192192Test.java  Schwaemm256128Test.java  Schwaemm256256Test.java  SchwaemmHelper.java  SchwaemmLib.java  SchwaemmMasked128128Test.java  SchwaemmMasked192192Test.java  SchwaemmMasked256128Test.java  SchwaemmMasked256256Test.java  SchwaemmTest.java  SparkleLib.java  SparkleMaskedSingleThreadTest.java  SparkleMaskedTest.java  SparkleMaskedTest3.java  SparkleTest.java
src/test/java/benchmarks/: CompleteSparkleBenchmark.java  FullEschVarMessageLengthBenchmark.java  FullSchwaemmVarMessageLengthBenchmark.java  MaskedSchwaemmBenchmark.java  MaskedSparkleBenchmark.java  SchwaemmBenchmark.java  SparkleBenchmark.java
src/test/java/benchmarks/handin/: CompleteSparkleBenchmark.java  CompleteSparkleBenchmarkAllVariants.java  FullEschVarMessageLengthBenchmark.java  FullEschVariants512LengthBenchmark.java  FullSchwaemmVarMessageLengthBenchmark.java  SchwaemmVariants512LengthBenchmark.java
src/test/java/esch/: EschHelper.java  EschKatTestHelper.java  EschMaskedHigherOrderTest256.java  EschMaskedTest256.java  EschMaskedTest384.java  EschTest256.java  EschTest384.java
src/test/java/schwaemm/: Schwaemm128128Test.java  Schwaemm128128TestBigM.java  Schwaemm192192Test.java  Schwaemm192192TestBigM.java  Schwaemm256128Test.java  Schwaemm256128TestBigM.java  Schwaemm256256Test.java  Schwaemm256256TestBigM.java  SchwaemmHelper.java  SchwaemmLib.java  SchwaemmMasked128128HigherOrdersTest.java  SchwaemmMasked128128Test.java  SchwaemmMasked128128TestBigM.java  SchwaemmMasked192192Test.java  SchwaemmMasked192192TestBigM.java  SchwaemmMasked256128Test.java  SchwaemmMasked256128TestBigM.java  SchwaemmMasked256256Test.java  SchwaemmMasked256256TestBigM.java
src/test/java/sparkle/: BooleanAdditionTest.java  MaskedSparkleBooleanTest.java  MaskedSparkleFirstOrderTest.java  MaskedSparkleGoubinAdd.java  MaskedSparkleHigherOrderTest.java  MaskedSparkleKoggeStoneTest.java  SparkleLib.java  SparkleTest.java
src/test/resources/: sparkle
src/test/resources/c/: CMakeLists.txt  crypto_aead.h  crypto_hash.h  encrypt.c  genkat_aead.c  sparkle_opt.c
src/test/resources/schwaemm/: associate  key  message  nonce  schwaemmC
src/test/resources/sparkle/: sparkleC
src/test/resources/sparkleDir/: sparkle
